Adding Static Folder

--- a/MetroAlarm/templates/base.html
+++ b/MetroAlarm/templates/base.html
@@ -1,8 +1,11 @@
+{%load static %}
 <title> {%block title%} Title to Replace {%endblock title%}</title>
 
 <header> 
     <nav> 
+        <img src = "{% static 'images\\MetroLogo.png' %}" style = "max-width: 5%; max-height: auto; float: left">
         <h1>Metro Alarm</h1> 
+        <br>
         <hr>
     </nav>
 </header>
