--- a/MetroAlarm/templates/active_page.html
+++ b/MetroAlarm/templates/active_page.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block javascript %} <script = src = "{% static 'js\\alarm.js'%}"></script> {% endblock javascript%}
 {%block title%} Alarm Active {% endblock title %}
 
 {%block content_title%} <h1>Alarm Active</h1> {% endblock content_title %}
